<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.others.KeamananActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tbKemananAkun"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@drawable/custom_bg_gradient"
        android:minHeight="?attr/actionBarSize"
        android:orientation="horizontal"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/keamanan_akun"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/btnBack"
            app:layout_constraintStart_toEndOf="@id/btnBack"
            app:layout_constraintTop_toTopOf="@id/btnBack" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="350dp"
            android:layout_height="250dp"
            android:layout_marginTop="92dp"
            android:background="@drawable/bg_little_round"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="42dp"
                android:src="@drawable/chami_pict"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/chami_pict"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="@+id/imageView2"
                app:layout_constraintStart_toStartOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/inter_reguler"
                android:text="@string/pict_hint"
                android:textAlignment="center"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/textView3"
                app:layout_constraintHorizontal_bias="0.506"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:layout_goneMarginTop="15dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_shadow_bg"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tbKemananAkun">

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:text="@string/chami_pictt"
                android:layout_marginStart="15dp"
                android:layout_marginVertical="15dp"
                android:textSize="14sp"/>
            <ImageView
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="190dp"
                android:src="@drawable/ic_baseline_navigate_next_24"/>
        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/grey"/>
        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:text="@string/kata_sandi"
                android:layout_marginStart="15dp"
                android:layout_marginVertical="15dp"
                android:textSize="14sp"/>
            <ImageView
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="190dp"
                android:src="@drawable/ic_baseline_navigate_next_24"/>
        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/grey"/>
        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:text="@string/sidik_jari"
                android:layout_marginStart="15dp"
                android:layout_marginVertical="15dp"
                android:textSize="14sp"/>
            <ImageView
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="190dp"
                android:src="@drawable/ic_baseline_navigate_next_24"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>