<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="@id/ivBack"
        app:layout_constraintTop_toBottomOf="@id/ivBack">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_rounded_bg"
            android:backgroundTint="@color/teal_200"
            android:fontFamily="@font/inter_medium"
            android:paddingHorizontal="15dp"
            android:paddingVertical="3dp"
            android:textColor="@color/white"
            android:textSize="12sp"
            tools:text="50 Point"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/inter_medium"
            android:textSize="12sp"
            android:text="@string/tenggat"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:fontFamily="@font/inter_reguler"
            android:textSize="14sp"
            tools:text="12 Mei 2022"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="@id/linearLayout1"
        app:layout_constraintTop_toBottomOf="@id/linearLayout1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:textSize="16sp"
            tools:text="Judul Challenge"/>
        <TextView
            android:layout_width="385dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/inter_reguler"
            android:textSize="14sp"
            tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ultrices vitae auctor eu augue ut lectus arcu bibendum. Dolor morbi non arcu risus quis varius quam quisque. Pharetra sit amet aliquam id. Euismod lacinia at quis risus. Egestas diam in arcu cursus euismod quis viverra nibh."/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:textSize="14sp"
            android:layout_marginTop="15dp"
            android:text="@string/pemenang"/>
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            tools:src="@tools:sample/avatars"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/grey"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:text="@string/your_sub"
            android:textColor="@color/grey"
            android:layout_marginStart="15dp"/>

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_gravity="center_horizontal"
            android:paddingVertical="10dp"
            android:textAlignment="center"
            android:fontFamily="@font/inter_bold"
            android:textSize="16sp"
            android:textColor="@color/purple_500"
            android:background="@drawable/custom_round_stroke_bg"
            android:layout_marginTop="20dp"
            android:visibility="gone"
            android:text="@string/tambah_lampiran"/>

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_gravity="center_horizontal"
            android:paddingVertical="10dp"
            android:textAlignment="center"
            android:fontFamily="@font/inter_bold"
            android:textSize="16sp"
            android:textColor="@color/purple_500"
            android:background="@drawable/custom_round_stroke_bg"
            android:layout_marginTop="20dp"
            android:visibility="gone"
            android:text="@string/tandai_selesai"/>

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_gravity="center_horizontal"
            android:paddingVertical="10dp"
            android:paddingStart="10dp"
            android:fontFamily="@font/inter_bold"
            android:textSize="16sp"
            android:textColor="@color/purple_500"
            android:background="@drawable/custom_round_stroke_bg"
            android:layout_marginTop="20dp"
            android:visibility="visible"
            tools:text="file.pdf"
            app:drawableTint="@color/grey"
            app:drawableStartCompat="@drawable/ic_baseline_attach_file_24" />

        <Button
            android:id="@+id/btnKirim"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/custom_rounded_button"
            android:text="@string/kirim"
            android:visibility="visible"
            android:textAllCaps="false"/>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:background="@drawable/custom_add_comment_bg"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp">
            <EditText
                android:layout_width="247dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_reguler"
                android:textSize="14sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:hint="Masukkan pesan Pribadi"/>
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="4dp"
                android:src="@drawable/ic_baseline_send_24"
                android:background="@drawable/custom_background_send"
                app:tint="@color/white"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"/>
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>